[package]
name = "kernel"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static.workspace = true
log.workspace = true
riscv.workspace = true
spin.workspace = true
sbi-rt = { version = "0.0.3", features = ["legacy"] }
buddy_system_allocator = "0.9.1"

[build-dependencies]
lazy_static.workspace = true
